--- a/lang/kr.json
+++ b/lang/kr.json
@@ -130,5 +130,7 @@
 	"clear": "초기화",
 	"copy": "복사",
 	"filter": "필터",
-	"autoscroll": "자동 스크롤"
+	"autoscroll": "자동 스크롤",
+	"keysound_end_offset": "Key end offset",
+	"keysound_export_error": "Errors occured when exporting some keysounds, please check the Console tab for more details"
 }
