added font size setting

--- a/lang/cn.json
+++ b/lang/cn.json
@@ -132,5 +132,7 @@
 	"filter": "过滤",
 	"autoscroll": "自动滚屏",
 	"keysound_end_offset": "Key end offset",
-	"keysound_export_error": "Errors occured when exporting some keysounds, please check the Console tab for more details"
+	"keysound_export_error": "Errors occured when exporting some keysounds, please check the Console tab for more details",
+	"font_size": "Font size",
+	"restart_sayaslicer_font": "Restart sayaslicer for font changes to take effect!"
 }
