--- a/lang/jp.json
+++ b/lang/jp.json
@@ -132,5 +132,7 @@
 	"filter": "フィルター",
 	"autoscroll": "オートスクロール",
 	"keysound_end_offset": "Key end offset",
-	"keysound_export_error": "Errors occured when exporting some keysounds, please check the Console tab for more details"
+	"keysound_export_error": "Errors occured when exporting some keysounds, please check the Console tab for more details",
+	"font_size": "Font size",
+	"restart_sayaslicer_font": "Restart sayaslicer for font changes to take effect!"
 }
