--- a/lang/es.json
+++ b/lang/es.json
@@ -133,6 +133,6 @@
 	"autoscroll": "Autodesplazamiento",
 	"keysound_end_offset": "Offset de final de tecla",
 	"keysound_export_error": "Se ocurrieron errores al exportar algunos sonidos de tecla, favor de revisar la pestaña Console para más detalles",
-	"font_size": "Font size",
-	"restart_sayaslicer_font": "Restart sayaslicer for font changes to take effect!"
+	"font_size": "Tamaño de fuente",
+	"restart_sayaslicer_font": "¡Reinicie sayaslicer para que se apliquen los cambios en la fuente!"
 }
